--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,12 @@ a{
     color: #E5E7EB;
 }
 
+h1{
+    font-size: 48px;
+    font-weight: extra-bold;
+    color: #F9FAF8;
+}
+
 /* Header */
 
 header{
@@ -29,7 +35,7 @@ header{
     font-size: 24px;
     color: #F9FAF8;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 
@@ -39,22 +45,17 @@ header{
 
 .title{
     background-color: #1F2937;
-    display:flex;
-    justify-content: space-around;
+    display: flex;
+    justify-content: space-between;
 }
 
-.title-left-text-top{
-    font-size: 48px;
-    font-weight: extra-bold;
-    color: #F9FAF8;
-}
 
-.title-left-text-bottom{
+.title_left{
     font-size: 18px;
     color: #E5E7EB;
 }
 
-.title-left-button{
+.title_left_button{
     background-color: #3882F6;
     color: #E5E7EB;
     width: fit-content;
@@ -63,13 +64,23 @@ header{
     border-radius: 5px;
 }
 
-.title-right-image-placeholder{
+
+.title_left_button_text{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.title_right_image_placeholder{
     background-color: #6d747d;
     color: #E5E7EB;
     width: fit-content;
     padding: 80px;
     margin: 0px;
 }
+
+/* Main - Boxes */
+
+
 
 
 /* Footer */
