--- a/styles.css
+++ b/styles.css
@@ -139,5 +139,23 @@ header{
 
 /* Main - Quote */
 
+.quote{
+    background-color: #E5E7EB;
+
+}
+.quote_text{
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: lighter;
+    display:flex;
+    justify-content: center;
+    
+}
+.quote_author{
+    display:flex;
+    justify-content: center;
+    font-size: 25px;
+    color: #1F2937;
+}
 
 /* Footer */
